# Ai_for_Robotics

./: README.md
environment_pkg/: CMakeLists.txt  README.MD  package.xml
environment_pkg/config/: controller.yaml
environment_pkg/launch/: _simu_bringup.launch  simulate_tiago.launch  tiago.launch  tiago_house.launch  tiago_spawn.launch  upload.launch
environment_pkg/meshes/: door.stl
environment_pkg/models/Bed/: model.config  model.sdf
environment_pkg/models/Bed/mesh/: bed.stl
environment_pkg/models/Door1/: model.sdf
environment_pkg/models/Door2/: model.sdf
environment_pkg/models/Door3/: model.sdf
environment_pkg/models/Door4/: model.sdf
environment_pkg/models/DoorEntry/: model.sdf
environment_pkg/models/Fridge/: model.sdf
environment_pkg/models/Fridge/mesh/: Samsung_Fridge_low.stl
environment_pkg/models/HouseWalls/: model.config  model.sdf
environment_pkg/models/Sink/: model.sdf
environment_pkg/models/Sink/mesh/: Faucet.stl
environment_pkg/models/Stove/: model.sdf
environment_pkg/models/Stove/mesh/: stove.stl
environment_pkg/models/Wardrobe/: model.sdf
environment_pkg/models/Wardrobe/mesh/: Wooden_wardrobe.stl
environment_pkg/models/tv/: model.sdf
environment_pkg/src/: test_clients.py  update_box.cpp  update_door.cpp
environment_pkg/srv/: BoxPickUp.srv  BoxPos.srv  BoxPutDown.srv  BoxUpdatePos.srv  DoorOpen.srv  DoorStatus.srv
environment_pkg/urdf/: base.urdf.xacro  base_sensors.urdf.xacro  tiago.urdf.xacro
environment_pkg/urdf/tiago/: base.urdf.xacro  base_sensors.urdf.xacro  tiago.urdf.xacro
environment_pkg/worlds/: tiago_house.world
